--- a/Project.html
+++ b/Project.html
@@ -10,7 +10,7 @@
   width: 100%;
   max-width: 800px; /* optional, keeps it from being too wide */
   margin: 0 auto;
-  aspect-ratio: 16/9; /* keeps correct ratio */
+  aspect-ratio: 16/9;
 }
 
 .video-container iframe,
